@@ -62,6 +62,8 @@ NOCC 1.3    ?? ??, 200?
     * RFE #1578965 : Improve check.php: use CSS to style and output complete
       page (Arnaud Boudou).
     * RFE #1227895 : Address Translation (Tim Gerundt).
+    * RFE #985428  : Folder Creation ad forward multiple messages (Arnaud
+      Boudou).
     * RFE #798725  : Nocc with htmlarea (Arnaud Boudou).
     * RFE #495879  : User Access List / From Address (Arnaud Boudou).
     * RFE #473980  : Caching of folder contents (Arnaud Boudou).
